Added RD_KEY1 to CONTROL and changed IO for decryption. Updated project file.

--- a/COLM_D.qsf
+++ b/COLM_D.qsf
@@ -49,3 +49,27 @@ set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE COLM_D_TB.vhd
+set_global_assignment -name VHDL_FILE RO_INV.vhd
+set_global_assignment -name VHDL_FILE COLM_D.vhd
+set_global_assignment -name VHDL_FILE KEY_REG_TB.vhd
+set_global_assignment -name VHDL_FILE XOR128.vhd
+set_global_assignment -name VHDL_FILE TAG_MEMORY.vhd
+set_global_assignment -name VHDL_FILE RO_REG.vhd
+set_global_assignment -name VHDL_FILE ROUND.vhd
+set_global_assignment -name VHDL_FILE PTX_MEMORY.vhd
+set_global_assignment -name VHDL_FILE PARAMS_REG.vhd
+set_global_assignment -name VHDL_FILE OR32.vhd
+set_global_assignment -name VHDL_FILE OR128.vhd
+set_global_assignment -name VHDL_FILE MEM_OUT_32.vhd
+set_global_assignment -name VHDL_FILE MEM_OUT.vhd
+set_global_assignment -name VHDL_FILE L_REG.vhd
+set_global_assignment -name VHDL_FILE KEY_REG.vhd
+set_global_assignment -name VHDL_FILE CTX_MEMORY.vhd
+set_global_assignment -name VHDL_FILE CONTROL.vhd
