--- a/COLM_D.qsf
+++ b/COLM_D.qsf
@@ -71,4 +71,5 @@ set_global_assignment -name VHDL_FILE L_REG.vhd
 set_global_assignment -name VHDL_FILE KEY_REG.vhd
 set_global_assignment -name VHDL_FILE CTX_MEMORY.vhd
 set_global_assignment -name VHDL_FILE CONTROL.vhd
+set_global_assignment -name VHDL_FILE TAG_VER_REG.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
